[gd_scene load_steps=28 format=1]

[ext_resource path="res://scripts/Flappy/FlappyGame.gd" type="Script" id=1]
[ext_resource path="res://assets/Flappy/urban-landscape-background-Preview.png" type="Texture" id=2]
[ext_resource path="res://scripts/Flappy/FlappyFelpudo.gd" type="Script" id=3]
[ext_resource path="res://assets/Flappy/dog/Run (1).png" type="Texture" id=4]
[ext_resource path="res://assets/Flappy/dog/Run (2).png" type="Texture" id=5]
[ext_resource path="res://assets/Flappy/dog/Run (3).png" type="Texture" id=6]
[ext_resource path="res://assets/Flappy/dog/Run (4).png" type="Texture" id=7]
[ext_resource path="res://assets/Flappy/dog/Run (5).png" type="Texture" id=8]
[ext_resource path="res://assets/Flappy/dog/Run (6).png" type="Texture" id=9]
[ext_resource path="res://assets/Flappy/dog/Run (7).png" type="Texture" id=10]
[ext_resource path="res://assets/Flappy/dog/Run (8).png" type="Texture" id=11]
[ext_resource path="res://scenes/Flappy/FlappyCano.tscn" type="PackedScene" id=12]
[ext_resource path="res://scripts/Flappy/FlappyGerador.gd" type="Script" id=13]
[ext_resource path="res://assets/Flappy/font160.fnt" type="BitmapFont" id=14]
[ext_resource path="res://assets/Fontes/font150.fnt" type="BitmapFont" id=15]
[ext_resource path="res://assets/screen_controls/transparentLight/transparentLight19.png" type="Texture" id=16]

[sub_resource type="Animation" id=1]

resource/name = "BackAnim"
length = 120.0
loop = false
step = 6.0
tracks/0/type = "value"
tracks/0/path = NodePath(".:transform/pos")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = {
"times": FloatArray( 0, 120 ),
"transitions": FloatArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( -18400, 0 ) ]
}

[sub_resource type="CapsuleShape2D" id=2]

custom_solver_bias = 0.0
radius = 59.4987
height = 6.65622

[sub_resource type="SpriteFrames" id=3]

animations = [ {
"frames": [ ExtResource( 4 ), ExtResource( 5 ), ExtResource( 6 ), ExtResource( 7 ), ExtResource( 8 ), ExtResource( 9 ), ExtResource( 10 ), ExtResource( 11 ) ],
"loop": true,
"name": "default",
"speed": 25.0
} ]

[sub_resource type="SegmentShape2D" id=4]

custom_solver_bias = 0.0
a = Vector2( 0, 0 )
b = Vector2( 999.979, -0.328331 )

[sub_resource type="SegmentShape2D" id=5]

custom_solver_bias = 0.0
a = Vector2( 0, 0 )
b = Vector2( 999.095, 1.27234 )

[sub_resource type="Animation" id=6]

resource/name = "lose"
length = 1.0
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("lose:visibility/visible")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = {
"times": FloatArray( 0 ),
"transitions": FloatArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("lose:rect/scale")
tracks/1/interp = 1
tracks/1/imported = false
tracks/1/keys = {
"times": FloatArray( 0, 0.5, 1 ),
"transitions": FloatArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 0, 0 ), Vector2( 1, 1 ) ]
}

[sub_resource type="Animation" id=7]

resource/name = "won"
length = 1.0
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("won:visibility/visible")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = {
"times": FloatArray( 0 ),
"transitions": FloatArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("won:rect/scale")
tracks/1/interp = 1
tracks/1/imported = false
tracks/1/keys = {
"times": FloatArray( 0, 0.5, 1 ),
"transitions": FloatArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 0, 0 ), Vector2( 1, 1 ) ]
}

[sub_resource type="StyleBoxFlat" id=8]

content_margin/left = -1.0
content_margin/right = -1.0
content_margin/top = -1.0
content_margin/bottom = -1.0
bg_color = Color( 0.6, 0.6, 0.6, 1 )
light_color = Color( 0.8, 0.8, 0.8, 1 )
dark_color = Color( 0.8, 0.8, 0.8, 1 )
border_size = 0
border_blend = true
draw_bg = true

[sub_resource type="StyleBoxFlat" id=9]

content_margin/left = -1.0
content_margin/right = -1.0
content_margin/top = -1.0
content_margin/bottom = -1.0
bg_color = Color( 0.615686, 0.615686, 0.615686, 0.941176 )
light_color = Color( 0.30249, 0.733156, 0.921875, 1 )
dark_color = Color( 0.258575, 0.656048, 0.894531, 1 )
border_size = 0
border_blend = true
draw_bg = true

[sub_resource type="RectangleShape2D" id=10]

custom_solver_bias = 0.0
extents = Vector2( 10, 10 )

[sub_resource type="StyleBoxFlat" id=11]

content_margin/left = -1.0
content_margin/right = -1.0
content_margin/top = -1.0
content_margin/bottom = -1.0
bg_color = Color( 0.615686, 0.615686, 0.615686, 0.941176 )
light_color = Color( 0.8, 0.8, 0.8, 1 )
dark_color = Color( 0.8, 0.8, 0.8, 1 )
border_size = 0
border_blend = true
draw_bg = true

[node name="GameNode" type="Node2D"]

z/z = 2
script/script = ExtResource( 1 )

[node name="Background" type="Node2D" parent="."]

[node name="Sprite1" type="Sprite" parent="Background"]

transform/pos = Vector2( 0, -950 )
transform/scale = Vector2( 10, 10 )
texture = ExtResource( 2 )
centered = false

[node name="Sprite2" type="Sprite" parent="Background"]

transform/pos = Vector2( 3840, -950 )
transform/rot = -0.0423927
transform/scale = Vector2( 10, 10 )
texture = ExtResource( 2 )
centered = false

[node name="Sprite3" type="Sprite" parent="Background"]

transform/pos = Vector2( 7680, -950 )
transform/rot = -0.0423927
transform/scale = Vector2( 10, 10 )
texture = ExtResource( 2 )
centered = false

[node name="Sprite4" type="Sprite" parent="Background"]

transform/pos = Vector2( 11520, -950 )
transform/rot = -0.0423927
transform/scale = Vector2( 10, 10 )
texture = ExtResource( 2 )
centered = false

[node name="Sprite5" type="Sprite" parent="Background"]

transform/pos = Vector2( 15360, -950 )
transform/rot = -0.0423927
transform/scale = Vector2( 10, 10 )
texture = ExtResource( 2 )
centered = false

[node name="BackAnim" type="AnimationPlayer" parent="Background"]

playback/process_mode = 1
playback/default_blend_time = 0.0
root/root = NodePath("..")
anims/BackAnim = SubResource( 1 )
playback/active = true
playback/speed = 1.0
blend_times = [  ]
autoplay = ""

[node name="Felpudo" type="RigidBody2D" parent="."]

transform/pos = Vector2( 206.279, 756.846 )
input/pickable = false
shapes/0/shape = SubResource( 2 )
shapes/0/transform = Matrix32( 1, 0, 0, 1, 8.79126, 5.68762 )
shapes/0/trigger = false
collision/layers = 1
collision/mask = 1
mode = 2
mass = 1.0
friction = 1.0
bounce = 0.0
gravity_scale = 18.0
custom_integrator = false
continuous_cd = 0
contacts_reported = 0
contact_monitor = false
sleeping = false
can_sleep = true
velocity/linear = Vector2( 0, 0 )
velocity/angular = 0.0
damp_override/linear = -1.0
damp_override/angular = -1.0
script/script = ExtResource( 3 )

[node name="FelpudoAnim" type="AnimatedSprite" parent="Felpudo"]

transform/scale = Vector2( 0.4, 0.4 )
frames = SubResource( 3 )
animation = "default"
frame = 5
playing = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="Felpudo"]

transform/pos = Vector2( 8.79126, 5.68762 )
shape = SubResource( 2 )
trigger = false
_update_shape_index = 0

[node name="Limites" type="StaticBody2D" parent="."]

editor/display_folded = true
input/pickable = false
shapes/0/shape = SubResource( 4 )
shapes/0/transform = Matrix32( 1, 0, 0, 1, 0, 0 )
shapes/0/trigger = false
shapes/1/shape = SubResource( 5 )
shapes/1/transform = Matrix32( 1, 0, 0, 1, 0.193979, 1699.85 )
shapes/1/trigger = false
collision/layers = 1
collision/mask = 1
constant_linear_velocity = Vector2( 0, 0 )
constant_angular_velocity = 0.0
friction = 1.0
bounce = 0.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="Limites"]

shape = SubResource( 4 )
trigger = false
_update_shape_index = 0

[node name="CollisionShape2D 2" type="CollisionShape2D" parent="Limites"]

transform/pos = Vector2( 0.193979, 1699.85 )
shape = SubResource( 5 )
trigger = false
_update_shape_index = 1

[node name="Canos" type="Node2D" parent="."]

[node name="Cano" parent="Canos" instance=ExtResource( 12 )]

transform/pos = Vector2( 1159.85, 773.232 )

[node name="Gerador" type="Position2D" parent="Canos"]

transform/pos = Vector2( 1156.97, 769.849 )
script/script = ExtResource( 13 )

[node name="Timer" type="Timer" parent="Canos/Gerador"]

process_mode = 1
wait_time = 3.0
one_shot = false
autostart = false

[node name="Node2D" type="Node2D" parent="."]

z/z = 3

[node name="Control" type="Control" parent="Node2D"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 40.0
margin/bottom = 40.0

[node name="Label" type="Label" parent="Node2D/Control"]

rect/scale = Vector2( 0.5, 0.5 )
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = -2.0
margin/top = 35.0
margin/right = 1599.0
margin/bottom = 208.0
custom_fonts/font = ExtResource( 14 )
text = "0"
align = 1
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="end" type="Node2D" parent="."]

z/z = 3

[node name="end_anim" type="AnimationPlayer" parent="end"]

playback/process_mode = 1
playback/default_blend_time = 0.0
root/root = NodePath("..")
anims/lose = SubResource( 6 )
anims/won = SubResource( 7 )
playback/active = true
playback/speed = 1.0
blend_times = [  ]
autoplay = ""

[node name="lose" type="Panel" parent="end"]

rect/scale = Vector2( 0, 0 )
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 25.0
margin/top = 200.0
margin/right = 775.0
margin/bottom = 900.0
custom_styles/panelf = SubResource( 8 )
custom_styles/panel = SubResource( 9 )

[node name="lose_label" type="Label" parent="end/lose"]

rect/scale = Vector2( 0.5, 0.5 )
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 0.0
margin/top = 0.0
margin/right = 1500.0
margin/bottom = 690.0
custom_fonts/font = ExtResource( 15 )
custom_colors/font_color = Color( 1, 0, 0, 1 )
text = "Passeie de novo"
align = 1
valign = 2
autowrap = true
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="playagain_label" type="Label" parent="end/lose"]

rect/scale = Vector2( 0.4, 0.4 )
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 0.0
margin/top = 345.0
margin/right = 1875.0
margin/bottom = 495.0
custom_fonts/font = ExtResource( 15 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "jogar novamente"
align = 1
valign = 1
autowrap = true
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="playagain_button" type="TouchScreenButton" parent="end/lose"]

transform/pos = Vector2( 355, 370 )
transform/scale = Vector2( 36, 3 )
normal = null
pressed = null
bitmask = null
shape = SubResource( 10 )
shape_centered = true
shape_visible = true
passby_press = false
action = ""
visibility_mode = 0

[node name="won" type="Panel" parent="end"]

rect/scale = Vector2( 0, 0 )
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 25.0
margin/top = 200.0
margin/right = 775.0
margin/bottom = 900.0
custom_styles/panel = SubResource( 11 )

[node name="won_label" type="Label" parent="end/won"]

rect/scale = Vector2( 0.5, 0.5 )
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 0.0
margin/top = 0.0
margin/right = 1500.0
margin/bottom = 690.0
custom_fonts/font = ExtResource( 15 )
custom_colors/font_color = Color( 0.261251, 0.5625, 0.20874, 1 )
text = "O passeio acabou!"
align = 1
valign = 2
autowrap = true
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="backtomap_label" type="Label" parent="end/won"]

rect/scale = Vector2( 0.4, 0.4 )
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 0.0
margin/top = 345.0
margin/right = 1875.0
margin/bottom = 495.0
custom_fonts/font = ExtResource( 15 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "Voltar ao mapa"
align = 1
valign = 1
autowrap = true
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="backtomap_button" type="TouchScreenButton" parent="end/won"]

transform/pos = Vector2( 355, 370 )
transform/scale = Vector2( 33, 3 )
normal = null
pressed = null
bitmask = null
shape = SubResource( 10 )
shape_centered = true
shape_visible = true
passby_press = false
action = ""
visibility_mode = 0

[node name="TouchScreenButton" type="TouchScreenButton" parent="."]

transform/pos = Vector2( 700, 25 )
transform/scale = Vector2( 1.5, 1.5 )
normal = ExtResource( 16 )
pressed = null
bitmask = null
shape = null
shape_centered = true
shape_visible = true
passby_press = false
action = ""
visibility_mode = 0

[connection signal="timeout" from="Canos/Gerador/Timer" to="Canos/Gerador" method="_on_Timer_timeout"]

[connection signal="pressed" from="end/lose/playagain_button" to="." method="_on_playagain_button_pressed"]

[connection signal="pressed" from="end/won/backtomap_button" to="." method="_on_backtomap_button_pressed"]

[connection signal="pressed" from="TouchScreenButton" to="." method="_on_TouchScreenButton_pressed"]


